--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./styles/output.css">
     <title>TailWind Web</title>
 </head>
 <body>
-    
+    <h1 class="text-blue-500 underline">Mi primera clase tailwind</h1>
 </body>
 </html>
