--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/output.css">
     <title>TailWind Web</title>
 </head>
+
 <body>
-    <h1 class="text-blue-500 underline">Mi primera clase tailwind</h1>
+    <div class="container border-4 border-black mx-auto px-4">
+        <h1 class="text-blue-500 underline font-bold text-center">Mi primera web tailwind</h1>
+        <h2 class="text-xl font-bold my-4">Estilos Normales</h2>
+        <button class="bg-blue-600 text-blue-200 p-2 border-4 border-red-500 rounded
+         hover:bg-green-500">Haz
+            Click</button>
+            <h2 class="text-xl font-bold my-4">Pseudoclases</h2>
+
+            <button class="bg-blue-600 text-blue-200 p-2 border-4 border-red-500 rounded
+            hover:bg-green-500">Haz
+               Click</button>
+
+               <input type="text" placeholder="Name..." class="border rounded-full px-4 py-2 focus:outline-red-300">
+
+               <h2 class="text-xl font-bold my-4">Responsive</h2>
+
+               <div class="border-2 border-blue-800 sm:border-red-500 md:border-green-500 lg:border-black-600 xl:border-orange-500">caja</div>
+
+               <h2 class="text-xl font-bold my-4">Valores Arbitrarios</h2>
+
+    </div>
+
+   
 </body>
+
 </html>
